--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -12,10 +12,12 @@ else
 {
 <div>
     <table class="table table-bordered table-hover">
-        <tr>
-            <th>Customer</th>
-            <th>Discount Rate</th>
-        </tr>
+       
+            <tr>
+                <th>Customer</th>
+                <th>Membership Type</th>
+            </tr>
+       
         @foreach (var customer in Model)
         {
 
@@ -26,8 +28,9 @@ else
                        
                     </h3>
                 </td>
-                <td>
-                    @customer.MembershipType.DiscountRate%
+                <td><h3>
+                    @customer.MembershipType.Name
+                    </h3>
                 </td>
             </tr>
         }
