Added new form to add/edit Movie

--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -24,7 +24,7 @@ else
             <tr>
                 <td>
                     <h3>
-                        @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                        @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
                        
                     </h3>
                 </td>
