--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*Added as part of Vidly. SHowing validation error in Red color*/
+.field-validation-error
+{
+    color: red;
+}
+
+.input-validation-error
+{
+    border: 2px solid red; 
+}
